add cloudinary service and middleware

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ HOST=http://localhost:5000
 MONGODB_URL=mongodb+srv://viktorstefanov:DA4Ep9r5IfZ9yfx2@cv-builder.iafgu.mongodb.net/
 JWT_SECRET=m0sTD@ng3rouSPa$$worD
 NODE_ENV=development
+CLOUDINARY_URL=cloudinary://523466549722242:tlx1OYm6YBHCIjP4sK7TKDbt_ME@dfskvd9mb
+CLOUDINARY_NAME=dfskvd9mb
+CLOUDINARY_API_KEY=523466549722242
+CLOUDINARY_SECRET_KEY=tlx1OYm6YBHCIjP4sK7TKDbt_ME
